# my_tasks

./: pyproject.toml
my_tasks/: main.py  task_manager.py  tasks.txt  ui.py
src/: main.py  ui.py
src/tests/: pyproject.toml  test_example.py
tests/: test_example.py
