[project]
name = "pytest-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

#[tool.pytest.ini_options]
#minversion = "6.0"
#testpaths = ["tests"]
#python_files = test_*.py *_test.py
#python_functions = test_*
#addopts = [
#  "-vv",				        # подробный вывод хода теста
#  "--import-mode=importlib"  	# меньше проблем с импортами
#]